--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
