--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
