--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@react-oauth/google": "^0.12.1",
+    "@react-three/drei": "^9.121.3",
+    "@react-three/fiber": "^8.17.12",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
