--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "swagger-ui-react": "^5.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.8",
