--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,6 @@
 VITE_CLIENT_ID=860148702527-pgbq31qtabfne6tptketlnus64bnsjao.apps.googleusercontent.com
 VITE_CLIENT_SECRET=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
+
+GOOGLE_CLIENT_ID = 860148702527-pgbq31qtabfne6tptketlnus64bnsjao.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+JWT_SECRET=ditmemay
