--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.6",
     "react-router-dom": "^7.1.1",
     "three": "^0.172.0"
   },
